--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Chuanbo Liu
 email: chuanboliu.1@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Chuanbo Liu, researcher for science of intelligence and complex systems
 twitter_username: chuanboliu
 github_username: cbliu111
 minimal_mistakes_skin: default
@@ -60,11 +57,11 @@ plugins:
 author:
   name   : "Chuanbo Liu"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "I seek not just to live in this world, but to leave it transformed."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://chuanboliu.github.io/"
+      url: "https://cbliu111.github.io/chuanboliu.github.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
