--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,9 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://cbliu111.github.io/chuanboliu.github.io/"
+    - label: "Email"
+      icon: "fas fa-fw fa-link"
+      url: "chuanboliu.1@gmail.com"
     - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?hl=en&user=VpEEACwAAAAJ&view_op=list_works&gmla=AElLoL2swXCuHZu63UP944I95EQuA-gS-u6kVNcoamY29QUvzHJicAwKDpOhC5U4tS-03qzmBXMCfQeyNZQ0orD7TJm1bZiAdzKDzf_z7Pektv9SsQzmJJYbbTTV4Rdqxw"
