--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ twitter_username: chuanboliu
 github_username: cbliu111
 minimal_mistakes_skin: default
 search: true
+mathjax: true
 
 # Build settings
 markdown: kramdown
